k8s/fastapi-deployement.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:

      containers:

      - name: fastapi

        image: localhost:5000/fastapi-app:v1
        

        ports:
        - containerPort: 8000
