k8s/fastapi-services.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service

spec:
  type: NodePort

  selector:
    app: fastapi

  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30099
